--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "^3.0",
-		"symfony/phpunit-bridge" : "^3.0"
+		"symfony/phpunit-bridge" : "^3.0",
+		"escapestudios/symfony2-coding-standard": "~2.0"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
