--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 		"sensio/distribution-bundle" : "^5.0",
 		"sensio/framework-extra-bundle" : "^3.0.2",
 		"incenteev/composer-parameter-handler" : "^2.0",
-		"ddeboer/data-import-bundle" : "^0.1.0"
+		"ddeboer/data-import-bundle" : "^0.1.0",
+		"doctrine/doctrine-migrations-bundle": "^1.2"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "^3.0",
