--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,13 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    product.headers:
+        code: 'Product Code'
+        name: 'Product Name'
+        description: 'Product Description'
+        stock: 'Stock'
+        price: 'Cost in GBP'
+        discontinued: 'Discontinued'
 
 framework:
     #esi:             ~
