--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,8 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
-    app.csv_parser:
-        class:        AppBundle\Service\CsvParser
+    app.entity_filter:
+        class:        AppBundle\Service\EntityFilter
         arguments:    [ "%product.headers%", "@validator" ]
 
     app.logger:
